public/css/main.css
body {
  background-color: rgb(255, 251, 247);
  font-family: "Roboto", sans-serif;
}

header nav {
  font-family: "Share Tech Mono", monospace;
  font-size: 1.1rem;
  margin-top: 20px;
  /* background-color: aliceblue; */
}

header nav ul {
  line-height: 1rem;
  padding: 20px 0;
  /* background-color: grey; */
}

header nav li a {
  background: rgba(237, 237, 237, 0.3);
  margin: 3px;
  border-radius: 4px;
}

#main-wrapper .main {
  margin-bottom: 2rem;
}

#main-wrapper .main .heading-wrapper {
  margin-top: 2rem;
}

#main-wrapper .main .heading-wrapper .heading {
  font-family: "Share Tech Mono", monospace;
  font-size: 3rem;
  color: rgb(108, 40, 57);
}

#main-wrapper .main .heading-wrapper .paragraph {
  font-family: "Roboto", sans-serif;
  font-style: italic;
  font-weight: 300;
  color: rgb(108, 40, 57);
}

.btn-primary {
  background-color: rgb(108, 40, 57);
  border: none;
}

.userform .btn-primary {
  color: rgb(108, 40, 57);
  background-color: rgb(255, 255, 255);
  border: 3px solid rgb(108, 40, 57);
}

.userform .btn-primary:hover {
  color: white;
  background-color: rgb(108, 40, 57);
}

.form-control {
  border: 1px solid rgb(108, 40, 57);
  color: rgb(11, 33, 58);
  font-family: "Share Tech Mono", monospace;
}

.form-control::-webkit-input-placeholder {
  /* color: rgb(29, 85, 148); */
  color: rgb(91, 56, 28);
  font-family: "Share Tech Mono", monospace;
}

input,
select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-left: 15px;
  color: rgb(91, 56, 28);
  border: 1px solid rgb(108, 40, 57);
  font-family: "Share Tech Mono", monospace;
}

.searchbar {
  border-radius: 6px;
  border: 1px solid rgb(108, 40, 57);
}

.searchbar .btn:hover {
  background-color: rgb(225, 39, 85);
}

.searchbar .form-control {
  border: none;
}

.searchbar select {
  border: none;
}

.sidebar {
  padding: 0;
}

.sidebar .donors {
  background-image: url("../img/donors-bg.jpg");
}

.sidebar .seekers {
  background-image: url("../img/seekers-bg.jpg");
}

.sidebar .login {
  background-image: url("../img/login-bg.jpg");
}

.sidebar .dashboard {
  background-image: url("../img/dashboard-bg.jpg");
}

.sidebar .background {
  background-position: center;
  background-size: cover;
}

.sidebar .wrapper {
  position: absolute;
  bottom: 0;
  margin: 0 50px;
  color: white;
}

.sidebar .wrapper h3 {
  font-family: "Share Tech Mono", monospace;
}

.sidebar .wrapper p {
  font-family: "Roboto", sans-serif;
  font-style: italic;
  font-weight: 300;
  margin-top: 20px;
}

.sidebar .wrapper .foot p {
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-size: 0.9rem;
  margin: 40px 0;
  opacity: 0.7;
}

.results {
  margin-top: 40px;
}

.results .block {
  font-family: "Share Tech Mono", monospace;
  font-size: 1.1rem;
  margin-top: 30px;
  border-radius: 10px;
  padding: 30px 20px;
  line-height: 0.8rem;
  background-color: rgb(252, 248, 244);
  border: 1px solid rgb(108, 40, 57);
}

.results .block:hover {
  background-color: rgba(108, 40, 57, 0.1);
  box-shadow: 10px 10px 8px 10px #888888;
}

.results p {
  padding: 4px;
}

.results p:hover {
  background-color: rgb(232, 75, 103);
  color: white;
  padding: 4px;
  border-radius: 6px;
}

.results .label {
  color: rgb(119, 119, 119);
}

.results .data {
  float: right;
}

.results h4 {
  text-transform: capitalize;
  margin-bottom: 2rem;
}

form {
  margin-bottom: 20px;
}

footer {
  color: white;
  background-color: rgb(232, 75, 103);
  padding: 2px;
  font-family: "Share Tech Mono", monospace;
}

footer a,
a:visited {
  color: rgb(72, 23, 35);
}

